# sixtracklib_cxxtempl

./: .gitignore  CMakeLists.txt  README.md  Settings.cmake.default
cxx/: CMakeLists.txt  ext_libs.h  ext_libs.h.template  sixtracklib.hpp
cxx/boost_multiprec/: beam_elements.hpp  definitions.hpp  math_constant_traits.hpp  phys_constant_traits.hpp  track_particle.hpp  track_particle_data.hpp
cxx/common/: CMakeLists.txt
cxx/common/be/: CMakeLists.txt  beam_elements.h  beam_elements.hpp  beam_elements_base.hpp
cxx/common/be/cavity/: be_cavity.h  be_cavity.hpp  be_cavity_data.hpp  be_cavity_traits.hpp  cavity.hpp  track.hpp
cxx/common/be/dipedge/: be_dipedge.h  be_dipedge.hpp  be_dipedge_data.hpp  be_dipedge_traits.hpp  dipedge.hpp  track.hpp
cxx/common/be/drift/: be_drift.h  be_drift.hpp  be_drift_data.hpp  be_drift_exact.h  be_drift_exact.hpp  be_drift_exact_data.hpp  be_drift_traits.hpp  definitions.h  drift.hpp  drift_data.hpp  drift_exact.hpp  track.hpp
cxx/common/be/limit/: be_limit_ellipse.h  be_limit_ellipse.hpp  be_limit_ellipse_data.hpp  be_limit_rect.h  be_limit_rect.hpp  be_limit_rect_data.hpp  be_limit_traits.hpp  limit.hpp  limit_ellipse.hpp  limit_rect.hpp  track.hpp
cxx/common/be/multipole/: be_multipole.h  be_multipole.hpp  be_multipole_data.hpp  be_multipole_traits.hpp  definitions.h  multipole.hpp  track.hpp
cxx/common/be/srotation/: be_srotation.h  be_srotation.hpp  be_srotation_data.hpp  be_srotation_traits.hpp  srotation.hpp  track.hpp
cxx/common/be/xyshift/: be_xyshift.h  be_xyshift.hpp  be_xyshift_data.hpp  be_xyshift_traits.hpp  track.h  track.hpp  xyshift.hpp
cxx/common/internal/: math_constant_traits.hpp  obj_store_traits.hpp  phys_constant_traits.hpp
cxx/common/particles/: particle_traits.hpp  track_particle.h  track_particle.hpp  track_particle_base.hpp  track_particle_data.hpp
cxx/common/track/: obj_track_traits.hpp
cxx/xsimd/: track_particle.hpp  track_particle_base.hpp  track_particle_data.hpp
examples/: CMakeLists.txt  test_buffer_store.cpp  test_particles.cpp  test_track_drift.cpp  test_track_mp.cpp  test_xsimd.cpp
